--- a/SIT220_Task1.ipynb
+++ b/SIT220_Task1.ipynb
@@ -8,7 +8,7 @@
     "# SIT220 – Data Wrangling  \n",
     "## Task 1P – Working with NumPy Vectors (Unidimensional Data)\n",
     "\n",
-    "**Name:** Barbara Rein P. Calma\n"
+    "**Name:**Rein\n"
    ]
   },
   {
