--- a/SIT220t2.ipynb
+++ b/SIT220t2.ipynb
@@ -8,7 +8,7 @@
     "# SIT220 – Data Wrangling  \n",
     "## Task 2 – NYC Weather Data (Questions 1–4)\n",
     "\n",
-    "**Name:** Barbara Calma\n",
+    "**Name:** Rein\n",
     "\n",
     "This notebook works with the hourly weather data for 2013 from the\n",
     "`nycflights13_weather.csv` file. The dataset contains measurements from\n",
